# lumai-1750360701748-ue2ooq

./: Anchor.toml  README.md  package.json
app/: layout.tsx  page.tsx  tailwind.config.js
app/src/components/: ActivityFeed.tsx  BettingInterface.tsx  MarketCard.tsx  MarketCreator.tsx  OddsDisplay.tsx  Portfolio.tsx
app/src/hooks/: useBetting.ts  useMarkets.ts  usePortfolio.ts
app/src/pages/: create.tsx  index.tsx  portfolio.tsx
app/src/pages/market/: [id].tsx
app/src/styles/: globals.css
app/src/types/: market.ts
app/src/utils/: oracle.ts  pricing.ts  program.ts
programs/zentro/: Cargo.toml
programs/zentro/src/: error.rs
programs/zentro/src/instructions/: add_liquidity.rs  claim_winnings.rs  create_market.rs  place_bet.rs  resolve_market.rs
programs/zentro/src/state/: liquidity_pool.rs  user_position.rs
programs/zentro/src/utils/: oracle.rs  pricing.rs
