```toml
[package]
name = "zentro"
version = "0.1.0"
description = "Zentro prediction market program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zentro"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
```